--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--credit card-->
     <div class="infopopup">
       <div class="infocard">
-        <img src="/assets/image/mata.gif" alt="eyes" />
+        <img src="./assets/image/mata.gif" alt="eyes" />
         <div id="infoCntr">
           <p id="infotxt">create by kakonoomoide && chat gpt.</p>
         </div>
@@ -65,7 +65,7 @@
     <!-- video player -->
     <div class="SHvideo">
       <video
-        src="/assets/video/2.mp4"
+        src="./assets/video/2.mp4"
         class="slider"
         autoplay
         loop
