fix the bug (can`t load the file)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--credit card-->
     <div class="infopopup">
       <div class="infocard">
-        <img src="/assets/image/mata.gif" alt="eyes" />
+        <img src="./assets/image/mata.gif" alt="eyes" />
         <div id="infoCntr">
           <p id="infotxt">create by kakonoomoide && chat gpt.</p>
         </div>
@@ -65,7 +65,7 @@
     <!-- video player -->
     <div class="SHvideo">
       <video
-        src="/assets/video/2.mp4"
+        src="./assets/video/2.mp4"
         class="slider"
         autoplay
         loop
@@ -73,28 +73,28 @@
       ></video>
 
       <ul>
-        <li onclick="videoslider('/assets/video/1.mp4')">
+        <li onclick="videoslider('./assets/video/1.mp4')">
           <video
-            src="/assets/video/1.mp4"
-            poster="/assets/image/thumbnile/1.jpg"
+            src="./assets/video/1.mp4"
+            poster="./assets/image/thumbnile/1.jpg"
           ></video>
         </li>
-        <li onclick="videoslider('/assets/video/3.mp4')">
+        <li onclick="videoslider('./assets/video/3.mp4')">
           <video
-            src="/assets/video/3.mp4"
-            poster="/assets/image/thumbnile/3.jpg"
+            src="./assets/video/3.mp4"
+            poster="./assets/image/thumbnile/3.jpg"
           ></video>
         </li>
-        <li onclick="videoslider('/assets/video/4.mp4')">
+        <li onclick="videoslider('./assets/video/4.mp4')">
           <video
-            src="/assets/video/4.mp4"
-            poster="/assets/image/thumbnile/4.jpg"
+            src="./assets/video/4.mp4"
+            poster="./assets/image/thumbnile/4.jpg"
           ></video>
         </li>
-        <li onclick="videoslider('/assets/video/5.mp4')">
+        <li onclick="videoslider('./assets/video/5.mp4')">
           <video
-            src="/assets/video/5.mp4"
-            poster="/assets/image/thumbnile/5.jpg"
+            src="./assets/video/5.mp4"
+            poster="./assets/image/thumbnile/5.jpg"
           ></video>
         </li>
       </ul>
